// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Clickable /> when ariaLabel is passed matches its snapshot 1`] = `
<button
  aria-label="aria label content"
  className="y-clickable"
  type="button"
>
  <span
    className="y-fakeLink"
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when block is true matches its snapshot 1`] = `
<button
  className="y-clickable y-clickable__block"
  type="button"
>
  <span
    className="y-fakeLink"
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when focusableRef is passed matches its snapshot 1`] = `
<button
  class="y-clickable"
  type="button"
>
  <span
    class="y-fakeLink"
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when title is passed matches its snapshot 1`] = `
<button
  className="y-clickable"
  title="extra browser tooltip content"
  type="button"
>
  <span
    className="y-fakeLink"
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> when unstyled matches its snapshot 1`] = `
<button
  className="y-clickable"
  type="button"
>
  clickable content
</button>
`;

exports[`<Clickable /> with additional className matches its snapshot 1`] = `
<button
  className="y-clickable TEST_CLASSNAME"
  type="button"
>
  <span
    className="y-fakeLink"
  >
    clickable content
  </span>
</button>
`;

exports[`<Clickable /> with default options matches its snapshot 1`] = `
<button
  className="y-clickable"
  type="button"
>
  <span
    className="y-fakeLink"
  >
    clickable content
  </span>
</button>
`;
